--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -6,28 +6,99 @@
 		justify-content: space-between;
 		align-items: center;
 		padding: 16px;
+		position: relative;
 	}
 	&__content{}
+	&__overlayMenu{
+		@media (max-width:$md4+px) {
+			&.active{
+				position: fixed;
+			    top: 0;
+			    left: 0;
+			    width: 100%;
+			    height: 100%;
+			    background: rgba(0,0,0,0.3);
+			    z-index: 39;
+			}
+		}
+	}
 	&__menu{
 		display: flex;
 		align-items: center;
 		margin-right: 16px;
-		> *:not(:last-child){
-			margin-right: 16px;
+		> *:not(.btnSec){
+			padding: 8px;
+			border-radius: 12px;
+			text-decoration: none;
+			&:hover{
+				background-color: $lightGray;
+			}
 		}
-		@media (max-width:$md2+px) {
-		    display: none;
+		.btnSec{
+			margin-left: 8px;
 		}
+		@media (max-width:$md_1045+px) {
+			display: none;
+			z-index: 40;
+		    position: absolute;
+		    top: 56px;
+		    left: 16px;
+		    width: 375px;
+		    flex-direction: column;
+		    padding: 16px;
+		    border-radius: 12px;
+		    background-color: $white;
+		    box-shadow: $boxShadow;
+		    > * {
+		    	width: 100%;
+		    }
+		    .btnSec{
+		    	margin: 8px 0 0 0;
+		    }
+			&.active{
+				display: flex;
+			}
+		}
+		@media (max-width:$md4+px) {
+			display: flex;
+			position: fixed;
+			top: auto;
+	        bottom: 0;
+	        left: 0;
+	        box-shadow: none;
+	        width: 100%;
+	        transition: all 0.3s ease 0s;
+	        transform: translateY(110%);
+			&.active{
+				transform: translateY(0%);
+				transition: all 0.3s ease 0s;
+			}
+	    }
 	}
 	&__logo{
 		.burger{display: none;}
-		@media (max-width:$md3+px) {
+		@media (max-width:$md_1045+px) {
 		    display: flex;
 		    align-items: center;
 		    .burger{
 		    	display: block;
 		    	margin-right: 24px;
 		    }
+		}
+	}
+}
+
+.burger{
+	background-color: transparent;
+	cursor: pointer;
+	.st-active{
+		display: none;
+	}
+	&.active{
+		.st-not-active{display: none;}
+		.st-active{
+			fill: $red;
+			display: block;
 		}
 	}
 }
@@ -92,19 +163,7 @@
 	}
 }
 
-.slideWhell{
-	&__sliderBig{
-		width: 100%;
-		padding-top: 100%;
-		position: relative;
-	}
-	&__scrollPreview{
-		margin-top: 8px;
-		max-width: 100%;
-		padding-bottom: 8px;
-		overflow-x: auto;
-		overflow-y: hidden;
-	}
+.horizontalScroller{
 	::-webkit-scrollbar {
     	width: 12px;
     	height: 12px;
@@ -132,18 +191,30 @@
 }
 
 .sliderBig{
-	position: absolute;
-	top: 0;
-	left: 0;
 	width: 100%;
-	height: 100%;
-	border: 2px solid $divider;
-	border-radius: 24px;
-	overflow: hidden;
+	padding-top: 100%;
+	position: relative;
+	&__body{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border: 2px solid $divider;
+		border-radius: 24px;
+		overflow: hidden;
+		&:hover{
+			/*.slick-dots > li.slick-active:after{
+				display: none !important;
+				animation-play-state: paused;
+				-webkit-animation-play-state: paused;
+			}*/
+		}
+	}
 	&__item{
 		position: relative;
 		max-height: 100%;
-		img{
+		img, video{
 			width: 100%;
 			height: 100%;
 		}
@@ -160,7 +231,7 @@
 	.slick-dots{
 		position: absolute;
 		left: 0;
-		bottom: 8px;
+		bottom: 0;
 		padding: 16px;
 		width: 100%;
 		display: flex;
@@ -173,8 +244,21 @@
 			background-color: $lightGray;
 			border-radius: 99px;
 			cursor: pointer;
+			position: relative;
+			overflow: hidden;
 			&.slick-active{
-				background-color: $red;
+				//background-color: $red;
+				&:after{
+					content: '';
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background-color: $red;
+					border-radius: 99px;
+					//animation: loading 3.9s linear 0s forwards;
+				}
 			}
 			button{
 				display: none;
@@ -183,9 +267,20 @@
 	}
 }
 
+@keyframes loading {
+ 	100% { width: 100%;}
+}
+
 .scrollPreview {
-	display: inline-flex;
-	margin: 0 -8px;
+	margin-top: 8px;
+	max-width: 100%;
+	padding-bottom: 8px;
+	overflow-x: auto;
+	overflow-y: hidden;
+	&__body{
+		display: inline-flex;
+		margin: 0 -8px;
+	}
 	&__item {
 		flex: 0 0 80px;
 		width: 80px;
@@ -195,6 +290,7 @@
 		border: 2px solid $divider;
 		margin: 0 8px;
 		cursor: pointer;
+		position: relative;
 		&.active{
 			border-color: $red;
 		}
@@ -206,12 +302,178 @@
 }
 
 
+////////////////////////// review ///////////////////////////
+
+.reviews{
+	padding-bottom: 64px;
+	@media (max-width:$md3+px) {
+	    padding-bottom: 32px;
+	}
+}
+
+.reviewCategory {
+	&__row {
+		display: flex;
+		@media (max-width:$md3+px) {
+		    flex-wrap: wrap;
+		}
+	}
+	&__col {
+		padding: 8px;
+		flex: 0 0 20%;
+		@media (max-width:$md3+px) {
+		    flex: 0 0 50%;
+		}
+		&.col-max{
+			@media (max-width:$md3+px) {
+			    flex: 0 0 100%;
+			}
+		}
+	}
+	&__item {
+		border: 2px solid $divider;
+		border-radius: 12px;
+		padding: 16px;
+		text-align: center;
+		cursor: pointer;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		&:hover{
+			background-color: $lightGray;
+			text-decoration: none;
+		}
+		&.active{
+			border: 2px solid $red;
+		}
+		img{
+			margin: 0 auto 20px auto;
+		}
+	}
+}
+
+.cardReviews {
+	width: 300px;
+	height: 100%;
+	padding: 16px;
+	border: 2px solid $divider;
+	border-radius: 12px;
+	background-color: $white;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	::-webkit-scrollbar {
+    	width: 8px !important;
+    	height: 8px;
+   		background-color: #fff !important;
+   		@media (max-width:$md3+px) {
+   		    display: none;
+   		}
+	}
+
+	::-webkit-scrollbar-thumb {
+	    background-color: rgba(136,136,158, 0.4);
+	    border-radius: 4px;
+	    @media (max-width:$md3+px) {
+   		    display: none;
+   		}
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+	    background-color: rgba(136,136,158, 0.5);
+	}
+
+	scrollbar-color: #999 #ccc;
+  	scrollbar-width: thin !important;
+
+	&__content{
+		position: relative;
+		z-index: 20;
+		margin-top: 16px;
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		max-height: 214px;
+		overflow: auto;
+		height: 100%;
+	}
+	&__text {
+		flex: 1;
+		&.hidden{
+			overflow: hidden;
+			display: -webkit-box;
+		    -webkit-line-clamp: 4;
+		    -webkit-box-orient: vertical;
+			text-overflow: ellipsis;
+			position: relative;
+			&:after{
+				content: '';
+				position: absolute;
+				width: 50%;
+				background: linear-gradient(90deg, rgba(255,255,255,0),rgba(255,255,255,1));
+				height: 24px;
+				bottom: 0;
+				right: 0;
+			}
+		}
+	}
+	&:hover{
+		.cardReviews__button.js-hide-text{
+			opacity: 1;
+		}
+	}
+	&__button {
+		margin-bottom: 16px;
+		text-align: left;
+		color: $red;
+		background-color: transparent;
+		display: none;
+		&.js-hide-text{
+			display: block;
+			@media (min-width:$md3+px) {
+			   opacity: 0; 
+			}
+		}
+		&.active{
+			.show-more{display: none;}
+			.show-less{display: block;}
+		}
+		.show-less{
+			display: none;
+		}
+	}
+}
+
+.userImage {
+	border-radius: 99px;
+	flex: 0 0 40px;
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+	position: relative;
+	&.notImage{
+		background-color: $red;
+	}
+	span{
+		color: $white;
+		@extend .text-big;
+	}
+	img{
+		@extend .posa;
+	}
+}
+
 ///////////////////////// result21 //////////////////////////
 
 .result21 {
 	background-color: $lightGray;
 	&__row {
-		padding: 16px 8px;
+		padding: 8px;
 		display: flex;
 		align-items: center;
 		@media (max-width:$md3+px) {
@@ -276,6 +538,27 @@
 	}
 }
 
+/////////////////////////// stick ///////////////////////////
+
+.stick {
+	&__image{
+		text-align: center;
+		img{
+			max-width: 100%;
+		}
+	}
+	&__desc{
+		@media (max-width:$md3+px) {
+		    display: none;
+		}
+	}
+	&__mob{
+		@media (min-width:$md3+px) {
+		    display: none;
+		}
+	}
+}
+
 //////////////////////// effectSerum /////////////////////////
 
 .effectSerum {
@@ -293,23 +576,50 @@
 		}
 		display: flex;
 		flex-direction: column;
+		@media (max-width:$md3+px) {
+		    flex-direction: row;
+		}
 	}
 	&__label {
 		display: flex;
 		align-items: center;
+		@media (max-width:$md3+px) {
+		    flex-direction: column;
+		    max-width: 45px;
+		    .text-huge{
+		    	font-family: "FuturaPT-Heavy";
+			    font-size: 18px;
+			    line-height: 24px;
+			    text-align: center;
+			    padding: 0;
+		    }
+		}
 		.line{
 			flex: 1 1 auto;
 			height: 4px;
+			@media (max-width:$md3+px) {
+			    width: 4px;
+			}
 		}
 		&.v1{
 			.line-1{background-color: $whiteBlue;}
 			.text-huge{color: $whiteBlue;}
-			.line-2{background: $lg1;}
+			.line-2{
+				background: $lg1;
+				@media (max-width:$md3+px) {
+				    background: $lg1_mob;
+				}
+			}
 		}
 		&.v2{
 			.line-1{background-color: $violet2;}
 			.text-huge{color: $violet2;}
-			.line-2{background: $lg2;}
+			.line-2{
+				background: $lg2;
+				@media (max-width:$md3+px) {
+				    background: $lg2_mob;
+				}
+			}
 		}
 		&.v3{
 			.line-1{background-color: $red;}
@@ -320,6 +630,9 @@
 	&__content {
 		flex: 1;
 		padding: 10px 10px 0 10px;
+		@media (max-width:$md3+px) {
+		    padding: 10px 0px 0 18px;
+		}
 
 	}
 	&__text{
@@ -329,10 +642,8 @@
 		border-radius: 24px;
 		display: flex;
 		align-items: center;
-		@media (min-width:$md3+px) and (max-width:$md2+px) {
-		    flex-direction: column;
-		}
-		@media (max-width:$md4+px) {
+		position: relative;
+		@media (max-width:$md2+px){
 		    flex-direction: column;
 		}
 		svg{
@@ -340,16 +651,125 @@
 			flex: 0 0 112px;
 			height: 112px;
 			margin-right: 16px;
-			@media (min-width:$md3+px) and (max-width:$md2+px) {
-			    margin: 0 0 16px 0;
-			}
-			@media (max-width:$md4+px) {
+			@media (max-width:$md2+px) {
 			    margin: 0 0 16px 0;
 			}
 		}
 	}
+	&__triangle{
+		display: block;
+	    position: absolute;
+		z-index: 12;
+		top: calc(50% - 56px);
+		left: -62px;
+		margin: 0 !important;
+		@media (min-width:$md3+px) {
+			transform: rotate(90deg);
+		    top: -62px;
+			left: calc(50% - 56px);
+		}
+	}
 }
 
+
+/////////////////////////// unique ////////////////////////////
+
+.unique {
+	background-color: $lightGray;
+	&__row {
+		padding: 64px 16px 0 16px;
+		display: flex;
+		align-items: center;
+		@media (max-width:$md_1150+px) {
+		    display: block;
+		}
+		@media (max-width:$md3+px) {
+		    padding: 32px 16px 0 16px;
+		}
+	}
+	&__col {
+		&.col-1 {
+			flex: 0 0 448px;
+		}
+		&.col-2 {
+			flex: 1 1 auto;
+		}
+	}
+	&__content {
+		@media (max-width:$md_1150+px) {
+		    max-width: 800px;
+		    margin: 0 auto;
+		    text-align: center;
+		}
+		@media (max-width:$md3+px) {
+		    text-align: left;
+		}
+	}
+	&__table{
+		padding: 16px 16px 0 16px;
+		@media (max-width:$md_1150+px) {
+		   padding: 16px 0 0 0;
+		}
+		table{
+			width: 100%;
+			border-collapse: collapse;
+			border-radius: 12px 12px 0px 0px;
+			svg{
+				fill: $white;
+				margin: 0 auto;
+			}
+			td{
+				@media (max-width:$md_552+px) {
+					font-family: "FuturaPT-Book";
+				    font-size: 16px;
+				    line-height: 16px;
+				}
+				background-color: $white;
+				padding: 16px 16px 0px 16px;
+				&.bg-red{
+					background-color: $red;
+				}
+				&.bg-lightGray{
+					background-color: $lightGray;
+				}
+				&.image1{
+					text-align: center;
+					padding: 0;
+					img{
+						margin-top: -23%;
+						max-width: 188px;
+						width: auto;
+						@media (max-width:$md_552+px) {
+						    width: 100%;
+						}
+					}
+				}
+				&.image2{
+					text-align: center;
+					img{
+						max-width: 107px;
+						width: auto;
+						@media (max-width:$md_552+px) {
+						    width: 100%;
+						}
+					}
+				}
+				&.brad-t{
+					border-radius: 12px 12px 0px 0px;
+				}
+				&.brad-tl{
+					border-radius: 12px 0px 0px 0px;
+				}
+				&.brad-tr{
+					border-radius: 0px 12px 0px 0px;
+				}
+			}
+			tr:last-child>td{
+				padding-bottom: 16px;
+			}
+		}
+	}
+}
 
 //////////////////////// warrantyWork /////////////////////////
 
@@ -368,6 +788,8 @@
 		}
 	}
 	&__text{
+		position: relative;
+		z-index: 5;
 		flex: 0 0 53.7%;
 		padding: 32px;
 		img{
@@ -387,6 +809,16 @@
 		@media (max-width:$md3+px) {
 		    flex: 0 0 100%;
 		}
+		@media (min-width:$md3+px) and (max-width:$md_1150+px) {
+			position: relative;
+			img{
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				width: 578px;
+				height: 408px;
+			}
+		}
 	}
 }
 
@@ -400,6 +832,7 @@
 		justify-content: space-between;
 		padding: 32px 0px;
 		border-bottom: 2px solid $divider;
+		cursor: pointer;
 		p{margin-right: 8px;}
 	}
 	&__body{
@@ -427,15 +860,27 @@
 	&__row {
 		padding: 8px;
 		display: flex;
-		@media (max-width:$md3+px) {
-		    flex-wrap: wrap;
+		@media (max-width:$md_1150+px) {
+		    flex-wrap: wrap-reverse;
 		}
 	}
 	&__col {
 		padding: 8px;
 		flex: 0 0 50%;
-		@media (max-width:$md3+px) {
+		@media (max-width:$md_1150+px) {
 		    flex: 0 0 100%;
+		}
+		&.mod2{
+			@media (max-width:$md_1150+px) {
+			    margin-top: 32px;
+			}
+		}
+	}
+	&__text{
+		.btn{
+			@media (max-width:$md_1150+px) {
+			    width: 100%;
+			}
 		}
 	}
 	&__smart{
@@ -443,6 +888,10 @@
 		display: flex;
 		align-items: flex-end;
 		padding: 16.5px 8px 8px 8px;
+		@media (max-width:$md_1150+px) {
+		    padding: 16.5px 0px 8px 0px;
+		    margin: 0 -8px;
+		}
 	}
 	&__col2{
 		padding: 8px;
@@ -455,15 +904,218 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-end;
+		position: relative;
+		.text-big{
+			@media (max-width:$md3+px) {
+		    	font-family: "FuturaPT-Heavy";
+				font-size: 18px;
+				line-height: 24px;
+			}
+		}
+		.p-32{
+			@media (max-width:$md3+px) {
+			    padding: 16px;
+			}
+		}
+		@media (max-width:$md3+px) {
+		    height: 300px;
+		}
+	}
+	&__wrap{
+		position: absolute;
+		top: 0;
+		left: 0;
+		transform: translateY(-50%);
+		width: 100%;
 		svg{
 			fill: $white;
 			margin: 0 auto;
+			@media (max-width:$md3+px) {
+			    width: 64px;
+			    height: 64px;
+			}
 		}
+		
 	}
 	&__stat2{
 		background-color: $red;
 		border-radius: 12px;
 		color: $white;
+		position: relative;
+		padding-top: 40px;
+		.text-big{
+			@media (max-width:$md3+px) {
+		    	font-family: "FuturaPT-Heavy";
+				  font-size: 18px;
+				  line-height: 24px;
+			}
+		}
+		.p-32{
+			@media (max-width:$md3+px) {
+			    padding: 16px;
+			}
+		}
+	}
+	&__background{
+		@extend .posa;
+		overflow: hidden;
+	}
+	&__bgItem{
+		height: 2px;
+		background-color: $divider;
+		margin-top: 62px;
+	}
+}
+
+////////////////////////// about ///////////////////////////
+
+.about{
+	&__scroll{
+		padding: 16px 8px 8px 8px;
+		.scroll__scroll{
+			padding-bottom: 8px;
+		}
+		.scroll__item{
+			padding: 0px;
+			&:first-child .about__item{
+				padding-left: 0px;
+			}
+		}
+	}
+	&__item{
+		width: 155px;
+		height: 266px;
+		border-radius: 12px;
+		overflow: hidden;
+		padding: 8px;
+		position: relative;
+		cursor: pointer;
+		img{
+			position: relative;
+			z-index: 2;
+			width: 100%;
+			height: 100%;
+			border-radius: 10px;
+			border: 2px solid #EAF0F6;
+		}
+	}
+	&__news{
+		background: linear-gradient(198.73deg, #E81F76 0%, #9029F8 35.43%, #00D1FF 67.21%, #0BD5A1 100.04%);
+		position: absolute;
+		left: 0px;
+		right: 0px;
+		top: 0px;
+		bottom: 0px;
+		z-index: 8;
+		border-radius: 11px;
+		padding: 8px;
+		&:after{
+			content: "";
+			position: absolute;
+			top: 2px;
+			left: 2px;
+			bottom: 2px;
+			right: 2px;
+			background-color: $white;
+			border-radius: 10px;
+		}
+		&:before{
+			content: "";
+			position: absolute;
+			z-index: 5;
+			top: 8px;
+			left: 8px;
+			bottom: 8px;
+			right: 8px;
+			background: rgba(69, 76, 84, 0.12);
+			backdrop-filter: blur(16px);
+			border-radius: 10px;
+		}
+		img{border: none;}
+	}
+	&__text{
+		@extend .posa;
+		@extend .f-jcc-aic;
+		flex-direction: column;
+		color: $white;
+		z-index: 20;
+		padding: 16px;
+	}
+	&__photoCount{
+		text-align: center;
+		border: 2px solid $divider;
+		box-sizing: border-box;
+		padding: 6px;
+		width: 100%;
+		border-radius: 99px;
+	}
+}
+
+.stories{
+	&.active{
+		position: fixed;
+		z-index: 100;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.3);
+		backdrop-filter: blur(15px);
+		.stories__scroll{
+			display: inline-block;
+		}
+		.about__scroll{
+			padding: 0;
+		}
+		.scroll{
+			&__body{
+				padding-top: 8px;
+				overflow-x: hidden;
+				overflow-y: auto;
+				height: 100vh;
+			}
+			&__scroll{
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-start;
+			}
+			&__item{
+				display: inline-block;
+				&:first-child .about__item{
+					padding-left: 8px;
+				}
+			}
+		}
+		.stories__body{display: flex;}
+		.about__item img{border: none;}
+	}
+	&__body{
+		display: none;
+		align-items: center;
+		justify-content: center;
+		@extend .posa;
+	}
+	&__slider{
+		height: 600px;
+		width: 328px;
+	}
+	&__item{
+		height: 100%;
+		img, video{
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	.slick-list {
+		border-radius: 12px;
+		overflow: hidden;
+		height: 100%;
+	}
+
+	.slick-track{
+		display: flex;
+		height: 100%;
 	}
 }
 
@@ -472,15 +1124,6 @@
 .feedback {
 	&__item {
 		border-bottom: 1px solid $divider;
-	}
-	&__row {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-	&__person {
-		display: flex;
-		align-items: center;
 	}
 	&__info{
 		display: flex;
@@ -495,19 +1138,6 @@
 			}
 		}
 	}
-	&__initials {
-		background-color: $red;
-		border-radius: 99px;
-		margin-right: 16px;
-		flex: 0 0 40px;
-		width: 40px;
-		height: 40px;
-		color: $white;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-	&__name {}
 	&__content {
 		padding-left: 56px;
 		@media (max-width:$md3+px) {
@@ -590,16 +1220,6 @@
 		@media (max-width:$md4+px) {
 		    bottom: 4px;
 		    left: 4px;
-		}
-	}
-	&__playVideo{
-		position: absolute;
-		z-index: 4;
-		top: calc(50% - 20px);
-		left: calc(50% - 20px);
-		padding: 10px;
-		svg{
-			transform: translate(1px, 1px);
 		}
 	}
 }
