--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -11,6 +11,11 @@ body{
 			text-decoration: underline;
 		}
 	}
+	button{
+		font-family: inherit;
+		font-size: inherit;
+		line-height: inherit;
+	}
 }
 
 svg{
@@ -36,6 +41,17 @@ svg{
 
 img, video{
 	object-fit: cover;
+}
+
+img{
+	&.w80{
+		width: 80px;
+		height: 80px;
+	}
+	&.h24{
+		height: 24px;
+		display: flex;
+	}
 }
 
 hr{
@@ -79,9 +95,37 @@ hr{
 .p-32-0{padding: 32px 0;}
 .p-32{padding: 32px;}
 
-.main-p-32-16{padding: 32px 16px;}
-.main-p-32-8{padding: 32px 8px;}
-.main-p-32-0{padding: 32px 0;}
+.main-p-32-16{
+	padding: 32px 16px;
+	@media (max-width:$md3+px) {
+	    padding: 16px;
+	}
+}
+.main-p-32-8{
+	padding: 32px 8px;
+	@media (max-width:$md3+px) {
+	    padding: 16px 8px;
+	}
+}
+.main-p-32-0{
+	padding: 32px 0;
+	@media (max-width:$md3+px) {
+	    padding: 16px 0;
+	}
+}
+.main-p-64-0{
+	padding: 64px 0;
+	@media (max-width:$md3+px) {
+	    padding: 32px 0;
+	}
+}
+
+.main-pt-32-pb-16{
+	padding: 32px 0 16px 0;
+	@media (max-width:$md3+px) {
+	    padding: 16px 0 8px 0;
+	}
+}
 
 .ta-c{text-align: center;}
 
@@ -130,6 +174,7 @@ hr{
 /////////////////////// COLORS ////////////////////////////
 
 .darkGray{color: $darkGray;}
+.fillDarkGray{fill: $darkGray !important;}
 
 ///////////////////////// FLEX ////////////////////////////
 
@@ -148,6 +193,7 @@ hr{
 	display: flex;
 	align-items: center;
 }
+
 
 .f-jcsb-aic{
 	display: flex;
@@ -216,27 +262,15 @@ a.btn{
 	}
 }
 
-.burger{
-	background-color: transparent;
-	cursor: pointer;
-	.st-active{
-		display: none;
-	}
-	&.active{
-		.st-not-active{display: none;}
-		.st-active{
-			fill: $red;
-			display: block;
-		}
-	}
-}
-
 .link{
 	color: $red;
 	@extend .text-default;
 }
 
 .btnSec{
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	padding: 8px 24px;
 	border-radius: 99px;
 	background-color: $lightGray;
@@ -244,8 +278,7 @@ a.btn{
 	svg{
 		fill: $black;
 	}
-	display: flex;
-	justify-content: center;
+	
 	@extend .text-default;
 	&:hover{
 		background-color: $lightGrayHover;
@@ -301,10 +334,20 @@ a.btn{
 		transform: rotate(180deg);
 	}
 	&:hover{
-		transition: scale 0.2s ease 0s;
+	    transition: scale 0.2s ease 0s;
 		transform: scale(1.2);
 		&.btn-prev{
 			transform: rotate(180deg) scale(1.2);
+		}
+	}
+	&.btnPlayVideo{
+		position: absolute;
+		z-index: 4;
+		top: calc(50% - 20px);
+		left: calc(50% - 20px);
+		padding: 10px;
+		svg{
+			transform: translate(1px, 1px);
 		}
 	}
 	&.sliderBtn{
@@ -312,6 +355,8 @@ a.btn{
 		position: absolute;
 		top: calc(50% - 20px);
 		left: 24px;
+		opacity: 1 !important;
+		visibility: visible !important;
 		&.btn-next{
 			left: auto;
 			right: 24px;
@@ -319,6 +364,14 @@ a.btn{
 		@media (max-width:$md3+px) {
 		    display: none !important;
 		}
+	}
+	&.btn-prev, &.btn-next{
+		overflow: 0;
+		visibility: hidden;
+	}
+	&.open{
+		opacity: 1;
+		visibility: visible;
 	}
 }
 
