--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -1098,6 +1098,7 @@
 	&__slider{
 		height: 600px;
 		width: 328px;
+		position: relative;
 	}
 	&__item{
 		height: 100%;
@@ -1105,6 +1106,13 @@
 			width: 100%;
 			height: 100%;
 		}
+	}
+	.btnRound.btn-prev{
+		left: calc(50% - 40px - (328px / 2) - 56px);
+	}
+	.btnRound.btn-next{
+		right: auto;
+		left: calc(50% + (328px / 2) + 56px);
 	}
 
 	.slick-list {
@@ -1116,6 +1124,42 @@
 	.slick-track{
 		display: flex;
 		height: 100%;
+	}
+}
+
+.timescale{
+	&__lines{
+		position: absolute;
+		width: calc(100% - 28px);
+		height: 4px;
+		top: 16px;
+		left: 14px;
+		right: 14px;
+		display: inline-flex;
+	}
+	&__item{
+		flex: 1;
+		height: 100%;
+		margin: 0 2px;
+		background: rgba(255, 255, 255, 0.5);
+		border-radius: 99px;
+		overflow: hidden;
+	}
+	&__left{
+		height: 100%;
+		background: #FFFFFF;
+		width: 50%;
+	}
+	&__control{
+		position: absolute;
+		fill: $white;
+		top: 36px;
+		left: 16px;
+		cursor: pointer;
+		opacity: 0.5;
+		&.volumn{
+			left: 48px;
+		}
 	}
 }
 
