--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -1088,6 +1088,11 @@
 		}
 		.stories__body{display: flex;}
 		.about__item img{border: none;}
+		.stories__scroll{
+			@media (max-width:$md_552+px) {
+				display: none;
+			}
+		}
 	}
 	&__body{
 		display: none;
@@ -1099,13 +1104,33 @@
 		height: 600px;
 		width: 328px;
 		position: relative;
+		@media (max-width:$md3+px) {
+		    left: 77px;
+		}
+		@media (max-width:$md_552+px) {
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    .slick-list{
+		    	border-radius: 0px;
+		    }
+		}
 	}
 	&__item{
 		height: 100%;
+		position: relative;
 		img, video{
 			width: 100%;
 			height: 100%;
 		}
+	}
+	&__link{
+		z-index: 5;
+		position: absolute;
+		width: 100%;
+		left: 0;
+		bottom: 0;
+		padding: 16px;
 	}
 	.btnRound.btn-prev{
 		left: calc(50% - 40px - (328px / 2) - 56px);
@@ -1127,15 +1152,15 @@
 	}
 }
 
+
+
 .timescale{
+	@extend .posa;
+	height: auto;
+	padding: 16px;
 	&__lines{
-		position: absolute;
-		width: calc(100% - 28px);
 		height: 4px;
-		top: 16px;
-		left: 14px;
-		right: 14px;
-		display: inline-flex;
+		display: flex;
 	}
 	&__item{
 		flex: 1;
@@ -1147,20 +1172,38 @@
 	}
 	&__left{
 		height: 100%;
-		background: #FFFFFF;
-		width: 50%;
+		background: $blue;
+		width: 0%;
+		&.active{
+			animation: stories var(--stories-duration) forwards 0s linear;
+		}
+		&.complete{
+			width: 100%;
+		}
+		&.pause{
+			animation-play-state: paused;
+		}
 	}
 	&__control{
-		position: absolute;
+		//position: absolute;
 		fill: $white;
-		top: 36px;
-		left: 16px;
+		//top: 36px;
+		//left: 16px;
 		cursor: pointer;
 		opacity: 0.5;
 		&.volumn{
-			left: 48px;
+			margin-left: 8px;
+		}
+		&.close{
+			@media (min-width:$md_552+px) {
+			    display: none;
+			}
 		}
 	}
+}
+
+@keyframes stories {
+ 	100% { width: 100%;}
 }
 
 ///////////////////////// feedback //////////////////////////
@@ -1244,12 +1287,13 @@
 		    height: 0;
 		    padding-top: 100%;
 		}
-		button{
-			@extend .posa;
-			img, video{
-				width: 100%;
-				height: 100%;
-			}
+	}
+	&__wrap{
+		cursor: pointer;
+		@extend .posa;
+		img, video{
+			width: 100%;
+			height: 100%;
 		}
 	}
 	&__duration{
@@ -1266,6 +1310,48 @@
 		    left: 4px;
 		}
 	}
+}
+
+.isSliderReviews{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100% !important;
+	display: block !important;
+	z-index: 200;
+	background: rgba(0, 0, 0, 0.3);
+	backdrop-filter: blur(15px);
+	.imageFeedback{
+		&__item{
+			height: auto !important;
+			border-radius: 0px;
+			max-height: 95vh;
+		}
+		&__wrap{
+			position: static;
+			img, video{
+				width: auto;
+				height: auto;
+				max-height: 100%;
+			}
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
+	.slick-track{
+		display: flex !important;
+	}
+
+	.slick-list {
+		overflow: hidden;
+		height: 100%;
+		display: flex;
+		align-items: center;
+	}
+
+	.slick-slide{}
 }
 
 .pagination-sv {
