--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -220,6 +220,7 @@
 		}
 	}
 	.slick-list {
+		border-radius: 24px;
 		overflow: hidden;
 		height: 100%;
 	}
@@ -822,6 +823,21 @@
 	}
 }
 
+.warrantyWork.mod2{
+	background-color: $lightOrange;
+	.warrantyWork{
+		&__body{
+			padding: 0 16px;
+		}
+		&__row{
+			border-radius: 0px;
+		}
+		&__text{
+			padding: 32px 0px;
+		}
+	}
+}
+
 //////////////////////////// faq /////////////////////////////
 
 .dropdown{
@@ -1158,6 +1174,11 @@
 	@extend .posa;
 	height: auto;
 	padding: 16px;
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+	border-radius: 12px 12px 0px 0px;
+	@media (max-width:$md3+px) {
+	    border-radius: 0px;
+	}
 	&__lines{
 		height: 4px;
 		display: flex;
@@ -1172,7 +1193,7 @@
 	}
 	&__left{
 		height: 100%;
-		background: $blue;
+		background: $red;
 		width: 0%;
 		&.active{
 			animation: stories var(--stories-duration) forwards 0s linear;
@@ -1185,10 +1206,7 @@
 		}
 	}
 	&__control{
-		//position: absolute;
 		fill: $white;
-		//top: 36px;
-		//left: 16px;
 		cursor: pointer;
 		opacity: 0.5;
 		&.volumn{
@@ -1327,17 +1345,23 @@
 			height: auto !important;
 			border-radius: 0px;
 			max-height: 95vh;
+			width: 100%;
+			padding-top: 0 !important;
 		}
 		&__wrap{
 			position: static;
 			img, video{
 				width: auto;
 				height: auto;
+				max-width: 100%;
 				max-height: 100%;
 			}
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			span{
+				display: none;
+			}
 		}
 	}
 	.slick-track{
@@ -1354,10 +1378,24 @@
 	.slick-slide{}
 }
 
-.pagination-sv {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.feedbackSliderControls{
+	.btnRound{
+		position: fixed;
+		display: none;
+	}
+	&.active{
+		.btnRound{
+			z-index: 200;
+			display: flex;
+			&.btn-close{
+				display: flex !important;
+			}
+		}
+	}
+	
+}
+
+.pagination {
 	padding: 16px;
 	&__list {
 		li{
@@ -1374,6 +1412,7 @@
 			}
 			&.active{
 				background-color: $red;
+				border-color: $red;
 				a{
 					color: $white;
 				}
@@ -1391,20 +1430,6 @@
 }
 
 /////////////////////////// terms ////////////////////////////
-
-.terms{
-	&__row{
-		display: flex;
-		flex-wrap: wrap;
-	}
-	&__col{
-		flex: 0 0 33.333%;
-		padding: 16px;
-		@media (max-width:$md3+px) {
-		    flex: 0 0 100%;
-		}
-	}
-}
 
 .cardTerms{
 	border-radius: 24px;
@@ -1446,7 +1471,7 @@
 	}
 }
 
-.terms.isClone{
+.flexCol3.mod-v2{
 	.cardTerms{
 		align-items: flex-start;
 		justify-content: start;
@@ -1485,6 +1510,9 @@
 		    	padding: 10px 14px;
 		    }
 		}
+		a{
+			text-decoration: none !important;
+		}
 	}
 	&__body{
 		position: relative;
@@ -1498,14 +1526,6 @@
 		position: absolute;
 		top: 16px;
 		left: 16px;
-		padding: 4px 16px;
-		border-radius: 8px;
-		background-color: $red;
-		color: $white;
-		@extend .text-extra-small;
-		&.v2{
-			background-color: $black;
-		}
 	}
 	&__image{
 		position: relative;
@@ -1522,6 +1542,14 @@
 			max-width: 100%;
 			max-height: 100%;
 		}
+	}
+	&__btn{
+		margin-top: -20px;
+	}
+
+	.slick-list {
+		overflow: hidden;
+		padding: 16px 32px 16px 8px;
 	}
 }
 
