--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -12,7 +12,9 @@ $md1: $mw;
 $md_1150: 1149.98;
 $md_1045: 1044.98;
 $md2: 992.98;
+$md_872: 871.98;
 $md3: 767.98;
+$md_608: 608.98;
 $md_552: 551.98;
 $md4: 479.98;
 $fontfamily: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', 'Segoe WP', 'Helvetica Neue', 'Lucida Grande', Verdana, Tahoma, Arial, sans-serif;
