--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -200,9 +200,6 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		border: 2px solid $divider;
-		border-radius: 24px;
-		overflow: hidden;
 		&:hover{
 			/*.slick-dots > li.slick-active:after{
 				display: none !important;
@@ -212,8 +209,11 @@
 		}
 	}
 	&__item{
+		border: 2px solid $divider;
 		position: relative;
 		max-height: 100%;
+		border-radius: 24px;
+		overflow: hidden;
 		img, video{
 			width: 100%;
 			height: 100%;
@@ -959,7 +959,7 @@
 		transform: translateY(-50%);
 		width: 100%;
 		svg{
-			fill: $white;
+			//fill: $white;
 			margin: 0 auto;
 			@media (max-width:$md3+px) {
 			    width: 64px;
@@ -1581,6 +1581,260 @@
 		    border-radius: 0px;
 		    box-shadow: none;
 		}
+	}
+}
+
+//////////////////// Способы доставки /////////////////////
+
+.deliveryMethods{
+	padding: 8px;
+	display: flex;
+	flex-wrap: wrap;
+	@media (min-width:$md3+px) {
+	    display: none;
+	}
+	> * {
+		margin: 8px;
+	}
+}
+
+/////////////////// Бонусная программа ////////////////////
+
+.bonusStage{
+	padding: 16px;
+	display: flex;
+	align-items: flex-start;
+	@media (max-width:$md3+px) {
+	    flex-direction: column;
+	}
+	&__item{
+		flex: 1;
+		display: flex;
+		align-items: center;
+		.text-medium{
+			margin: 0 16px;
+			@media (min-width:$md3+px) and (max-width:$md2+px) {
+				margin: 16px 0 0 0;
+			}
+		}
+		@media (max-width:$md3+px) {
+		    flex: 0 0 100%;
+		    flex-direction: column;
+		    align-items: flex-start;
+		    &:not(:last-child){
+		    	margin-bottom: 32px;
+		    }
+		}
+		@media (min-width:$md3+px) and (max-width:$md2+px) {
+			align-items: flex-start;
+		}
+	}
+	&__number{
+		flex: 0 0 80px;
+		width: 80px;
+		height: 80px;
+		background-color: $red;
+		color: $white;
+		text-align: center;
+		border-radius: 24px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&__arrow{
+		flex: 0 0 64px;
+		width: 64px;
+		height: 21px;
+		margin-right: 16px;
+		@media (max-width:$md3+px) {
+		    transform: rotate(90deg);
+		    margin: 0;
+		}
+		@media (min-width:$md3+px) and (max-width:$md2+px) {
+			margin-top: 30px;
+		}
+	}
+	&__label{
+		display: flex;
+		align-items: center;
+		@media (max-width:$md3+px) {
+		    margin-bottom: 32px;
+		}
+		@media (min-width:$md3+px) and (max-width:$md2+px) {
+			flex-direction: column;
+			align-items: center;
+			.text-medium{
+				text-align: center;
+			}
+		}
+	}
+}
+
+.awards{
+	&__row{
+		display: flex;
+		flex-wrap: wrap;
+		padding: 8px;
+	}
+	&__col{
+		padding: 8px;
+		flex: 0 0 33.333%;
+		@media (max-width:$md3+px) {
+		    flex: 0 0 100%;
+		}
+	}
+	&__card{
+		height: 100%;
+		border-radius: 12px;
+		background-color: $green;
+		padding: 48px 32px 48px 128px;
+		overflow: hidden;
+		color: $white;
+		position: relative;
+		@media (min-width:$md3+px) and (max-width:$md2+px) {
+			padding-left: 64px;
+		}
+		@media (max-width:$md4+px) {
+		    padding-left: 64px;
+		}
+	}
+	&__decor{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 76px;
+		height: 100%;
+		z-index: 3;
+		border-right: 4px dashed $white;
+		@media (min-width:$md3+px) and (max-width:$md2+px) {
+			width: 48px;
+		}
+		@media (max-width:$md4+px) {
+		    width: 48px;
+		}
+		&:after, &:before{
+			content: "";
+			position: absolute;
+			right: -22px;
+			width: 40px;
+			height: 40px;
+			background-color: $white;
+			border-radius: 50%;
+		}
+		&:after{top: -20px;}
+		&:before{bottom: -20px;}
+	}
+	&__bg{
+		position: absolute;
+		left: 22px;
+		top: 40px;
+		font-family: "FuturaPT-Heavy";
+		font-weight: bold;
+	    font-size: 300px;
+	    line-height: 48px;
+	    color: $white;
+	    opacity: 0.15;
+	    transform: rotate(-30deg);
+	    &.mod-2{
+	    	top: 88px;
+	    }
+	}
+}
+
+.easyEarn {
+	&__row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	&__col {
+		padding: 16px;
+		flex: 0 0 50%;
+		@media (max-width:$md3+px) {
+		    flex: 0 0 100%;
+		}
+	}
+	&__card{
+		border-radius: 24px;
+		background-color: $blue;
+		width: 100%;
+		height: 100%;
+		position: relative;
+		padding: 55px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		.text-huge{
+			color: $white;
+		}
+		.image-hw-80{
+			background-color: transparent;
+		}
+	}
+	&__tail{
+		fill: $blue;
+		position: absolute;
+		bottom: -43px;
+		left: 0;
+		width: 103px;
+		height: 45px;
+		@media (max-width:$md3+px) {
+		    width: 51.5px;
+			height: 22.5px;
+			bottom: -21.5px;
+		}
+	}
+}
+
+////////////////////// Блог-статья ////////////////////////
+
+.paper {
+	&__row {
+		padding: 8px;
+		display: flex;
+		@media (max-width:$md3+px) {
+		    flex-wrap: wrap;
+		}
+	}
+	&__colMax {
+		padding: 8px;
+		flex: 1;
+		@media (max-width:$md3+px) {
+		    flex: 0 0 100%;
+		}
+	}
+	&__colMin {
+		padding: 8px;
+		flex: 0 0 376px;
+		@media (max-width:$md3+px) {
+		    flex: 0 0 100%;
+		}
+	}
+}
+
+.cardProduct{
+	box-shadow: $boxShadow;
+	border-radius: 24px;
+	padding: 16px;
+}
+
+.productItem{
+	display: flex;
+	text-decoration: none !important;
+	border-radius: 12px;
+	overflow: hidden;
+	padding: 4px;
+	border: 2px solid $white;
+	&:hover{
+		border: 2px solid $lightGray;
+	}
+}
+
+.stickyBlock{
+	height: 100%;
+	> * {
+		position: sticky;
+		top: 16px;
 	}
 }
 
